--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy GitHub Pages
 
 on:
   push:
-    branches: ['master'] # 如果你的默认分支不是 main，请修改这里
+    branches: ['master']
   workflow_dispatch:
 
 permissions:
@@ -22,30 +22,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v4
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
       - name: Install dependencies
         run: |
-          # 如果你的项目文件不在根目录，需要先 cd 到项目目录
-          # cd website
           npm install
       - name: Build
         run: |
-          # 如果你的项目文件不在根目录，需要先 cd 到项目目录
-          # cd website
           npm ci && CI=false npm run build
         env:
-          # 如果你的 URL 从根目录开始，则设置为 /，否则设置为你的子目录，如 /website
           PUBLIC_URL: /
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          # 如果你的项目文件不在根目录，请修改这里为项目的 build 目录，如 './website/build'
           path: './build'
 
   deploy:
