--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build React app
         run: npm run build
         env:
-          PUBLIC_URL: /nocode-bench-leaderboard
+          PUBLIC_URL: .
 
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v3
